[package]
name = "xlsx-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.20"
tempfile = "3.10"
walkdir = "2.5"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
formula-xlsx = { path = "../formula-xlsx" }
pretty_assertions = "1.4"
