[package]
name = "xlsx-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
formula-ascii = { path = "../formula-ascii" }
formula-office-crypto = { path = "../formula-office-crypto" }
globset = "0.4"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
walkdir = "2.5"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
formula-xlsx = { path = "../formula-xlsx" }
ms-offcrypto-writer = "1"
pretty_assertions = "1.4"
rand = "0.9"
