[package]
name = "formula-desktop-tauri"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "formula-desktop"
path = "src/main.rs"
# Building the actual desktop shell requires the system WebView toolchain
# (webkit2gtk/gtk on Linux). Unit tests for the backend logic don't.
required-features = ["desktop"]

[features]
default = []
# Enable the full desktop (Tauri) shell. This pulls in the system WebView
# toolchain on Linux (gtk/webkit), which isn't required for backend unit tests.
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-plugin-updater",
]

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
calamine = "0.26"
directories = "5.0"
formula-columnar = { path = "../../../crates/formula-columnar" }
formula-engine = { path = "../../../crates/formula-engine" }
formula-format = { path = "../../../crates/formula-format" }
formula-model = { path = "../../../crates/formula-model" }
formula-storage = { path = "../../../crates/formula-storage" }
formula-vba = { path = "../../../crates/formula-vba" }
formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
formula-xlsb = { path = "../../../crates/formula-xlsb" }
formula-xlsx = { path = "../../../crates/formula-xlsx" }
rust_xlsxwriter = "0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.8", features = ["v4"] }
keyring = "3.6"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
tauri-plugin-global-shortcut = { version = "2.3", optional = true }
tauri-plugin-updater = { version = "2.9", optional = true }
thiserror = "1.0"

[dev-dependencies]
cfb = "0.10"
tempfile = "3.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
xlsx-diff = { path = "../../../crates/xlsx-diff" }

[build-dependencies]
tauri-build = { version = "2.5", optional = true }
