[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "formula-desktop"
path = "src/main.rs"
# Building the actual desktop shell requires the system WebView toolchain
# (webkit2gtk/gtk on Linux). Unit tests for the backend logic don't.
required-features = ["desktop"]

[features]
default = []
# Enable the full desktop (Tauri) shell. This pulls in the system WebView
# toolchain on Linux (gtk/webkit), which isn't required for backend unit tests.
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-updater",
    "dep:http-range",
    "dep:percent-encoding",
    # Clipboard integrations on Linux may rely on GTK (system) libraries. Keep them
    # behind the `desktop` feature so backend unit tests can run headless without
    # a GTK/WebKit toolchain installed.
    "dep:gtk",
    "dep:gdk",
    "dep:glib",
    "dep:gdk-pixbuf",
    # Desktop builds should be able to open `.parquet` files out of the box.
    "parquet",
]
# Enable Parquet/Arrow-backed columnar imports.
#
# This is kept behind an opt-in feature so default backend unit tests stay
# lightweight (Arrow/Parquet pulls in a larger dependency surface).
parquet = ["formula-columnar/arrow"]

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
calamine = "0.26"
cfb = "0.10"
directories = "5.0"
futures-util = "0.3"
formula-columnar = { path = "../../../crates/formula-columnar" }
formula-engine = { path = "../../../crates/formula-engine" }
formula-format = { path = "../../../crates/formula-format" }
formula-xls = { path = "../../../crates/formula-xls" }
formula-model = { path = "../../../crates/formula-model" }
formula-storage = { path = "../../../crates/formula-storage" }
formula-vba = { path = "../../../crates/formula-vba" }
formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
formula-xlsb = { path = "../../../crates/formula-xlsb", features = ["write"] }
formula-xlsx = { path = "../../../crates/formula-xlsx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
keyring = "3.6"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tauri = { version = "2.9", optional = true, features = ["tray-icon"] }
tauri-plugin-global-shortcut = { version = "2.3", optional = true }
tauri-plugin-single-instance = { version = "2.2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2.9", optional = true }
thiserror = "1.0"
http-range = { version = "0.1", optional = true }
percent-encoding = { version = "2", optional = true }
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
# GTK-based clipboard backend (Wayland + X11).
#
# Keep these dependencies optional so backend unit tests can run headless unless the `desktop`
# feature is enabled.
gtk = { version = "0.18", optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gdk-pixbuf = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
xlsx-diff = { path = "../../../crates/xlsx-diff" }

[build-dependencies]
tauri-build = { version = "2.5", optional = true }
