[package]
name = "formula-desktop-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "desktop"
path = "src/lib.rs"

[[bin]]
name = "formula-desktop"
path = "src/main.rs"
# Building the actual desktop shell requires the system WebView toolchain
# (webkit2gtk/gtk on Linux). Unit tests for the backend logic don't.
required-features = ["desktop"]

[features]
default = []
# Enable the full desktop (Tauri) shell. This pulls in the system WebView
# toolchain on Linux (gtk/webkit), which isn't required for backend unit tests.
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-updater",
    "process-metrics",
    # Clipboard integrations on Linux may rely on GTK (system) libraries. Keep them
    # behind the `desktop` feature so backend unit tests can run headless without
    # a GTK/WebKit toolchain installed.
    "dep:gtk",
    "dep:gdk",
    "dep:glib",
    "dep:gdk-pixbuf",
    # Native rich clipboard integrations (macOS/Windows).
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:windows",
    # Desktop builds should be able to open `.parquet` files out of the box.
    "parquet",
]
# Enable Parquet/Arrow-backed columnar imports.
#
# This is kept behind an opt-in feature so default backend unit tests stay
# lightweight (Arrow/Parquet pulls in a larger dependency surface).
parquet = ["formula-columnar/arrow"]
process-metrics = ["dep:sysinfo"]

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
calamine = "0.26"
cfb = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std"] }
directories = "5.0"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
futures-util = "0.3"
dunce = "1.0"
formula-columnar = { path = "../../../crates/formula-columnar" }
formula-engine = { path = "../../../crates/formula-engine" }
formula-fs = { path = "../../../crates/formula-fs" }
formula-format = { path = "../../../crates/formula-format" }
formula-offcrypto = { path = "../../../crates/formula-offcrypto" }
formula-office-crypto = { path = "../../../crates/formula-office-crypto" }
formula-xls = { path = "../../../crates/formula-xls" }
formula-model = { path = "../../../crates/formula-model" }
formula-storage = { path = "../../../crates/formula-storage" }
formula-vba = { path = "../../../crates/formula-vba" }
formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
formula-xlsb = { path = "../../../crates/formula-xlsb", features = ["write"] }
formula-xlsx = { path = "../../../crates/formula-xlsx" }
pkcs8 = { version = "0.10", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"
socket2 = "0.5"
sysinfo = { version = "0.30", optional = true }
tempfile = "3.10"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5"
unicode-normalization = "0.1"
uuid = { version = "1.8", features = ["v4"] }
keyring = "3.6"
png = "0.17"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tauri = { version = "2.9", optional = true, features = ["tray-icon", "custom-protocol"] }
tauri-plugin-deep-link = { version = "2.4", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2.3", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2.2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-updater = { version = "2.9", optional = true }
thiserror = "1.0"
http-range = "0.1"
infer = "0.16"
mime_guess = "2.0"
percent-encoding = "2"
quick-xml = "0.37"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
# GTK-based clipboard backend (Wayland + X11).
#
# Keep these dependencies optional so backend unit tests can run headless unless the `desktop`
# feature is enabled.
gtk = { version = "0.18", optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gdk-pixbuf = { version = "0.18", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-app-kit = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
ms-offcrypto-writer = "1.0.7"
plist = "1.8"
rand = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
xlsx-diff = { path = "../../../crates/xlsx-diff" }

[build-dependencies]
tauri-build = { version = "2.5", optional = true }
